# misc-stuff

./: README.md
bbc-fetch/: README.md  pyproject.toml
bbc-fetch/bbc_fetch/: __main__.py
junkeys/: import.sh  make_charts.sh  process.sh  put_file.sh  rc.local  record_noise.sh  run.sh
